--- a/examples/SQuAD/configs/enwiki/pretrained_models/bert_memory/bert_config.json
+++ b/examples/SQuAD/configs/enwiki/pretrained_models/bert_memory/bert_config.json
@@ -11,25 +11,23 @@
 	"type_vocab_size": 2,
 	"vocab_size": 30522,
 	"attention_type": "self",
-        "kernel_size": 0,
-        "kernel_sizes": null,
-        "memory_layer_place": [5],
-        "mem_k_dim" : 16,
+        "memory_layer_place": [3],
+        "mem_k_dim" : 8,
         "mem_v_dim" : -1,
         "mem_heads" : 4,
-        "mem_knn" : 16,
-        "mem_share_values" : False,
-        "mem_shuffle_indices" : False,
-        "mem_shuffle_query" : False,
+        "mem_knn" : 8,
+        "mem_share_values" : false,
+        "mem_shuffle_indices" : false,
+        "mem_shuffle_query" : false,
         "mem_keys_type" : "uniform",
-        "mem_n_keys" : 512,
-        "mem_keys_learn" : True,
-        "mem_use_different_keys" : False,
+        "mem_n_keys" : 128,
+        "mem_keys_learn" : true,
+        "mem_use_different_keys" : false,
         "mem_query_layer_sizes" : "0,512,0",
-        "mem_query_bias" : True,
-        "mem_query_batchnorm" : True,
-        "mem_query_net_learn" : True,
-        "mem_multi_query_net" : False,
+        "mem_query_bias" : true,
+        "mem_query_batchnorm" : true,
+        "mem_query_net_learn" : true,
+        "mem_multi_query_net" : false,
         "mem_input_dropout" : 0,
         "mem_query_dropout" : 0,
         "mem_value_dropout" : 0
